--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
-SESSION_ID=
-AUTO_STATUS_SEEN=false
+SESSION_ID=Baraka-MD$PPNpe0Ve
+AUTO_STATUS_SEEN=true
 REJECT_CALL=false 
 MODE=public
 WELCOME=false
@@ -8,5 +8,5 @@ AUTO_TYPING=false
 AUTO_RECORDING=false
 ALWAYS_ONLINE=false 
 AUTO_BLOCK=false
-AUTO_REACT=false
+AUTO_REACT=true
 PREFIX=.
